--- a/WDC/FantasyLeague.html
+++ b/WDC/FantasyLeague.html
@@ -15,8 +15,12 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get League Data!</button>
-            </div>
+                <input type = "image" id = "submitButton" src="./TILFPL.png" /></div>
+              
+                
+        </div>
+        <div style="text-align: center">
+            Click on the image above to get the latest info for the TIL FPL
         </div>
     </div>
     <script src="./FantasyLeague.js" type="text/javascript"></script>
