--- a/WDC/FantasyLeague_old.html
+++ b/WDC/FantasyLeague_old.html
@@ -15,7 +15,8 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-                <input type = "image" id = "submitButton" src="./TILFPL.png" /></div>
+                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get League Data!</button>
+            </div>
         </div>
     </div>
     <script src="./FantasyLeague.js" type="text/javascript"></script>
